--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Gabe Nelson's Portfolio"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Gabe Nelson's Portfolio</title>
